--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,6 @@ upload_speed = 115200
 build_flags = 
 	-DRAK4631=1
 	-DMYLOG_LOG_LEVEL=MYLOG_LOG_LEVEL_DEBUG
-lib_deps = 
-	closedcube/ClosedCube BME680@^1.2.0
+;lib_deps = 
+
 	
