--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,6 @@ upload_speed = 115200
 build_flags = 
 	-DRAK4631=1
 	-DMYLOG_LOG_LEVEL=MYLOG_LOG_LEVEL_DEBUG
-;lib_deps = 
+lib_deps = SX126x-Arduino@^2.0.0
 
 	
